# ai-agent-observability

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  ci.yml  integration.yml
deploy/clickhouse/: Dockerfile  entrypoint.sh
deploy/grafana-image-renderer/: Dockerfile
deploy/grafana-mcp/: Dockerfile
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/dashboards/json/: system-overview.json
deploy/helm/ai-agent-monitoring/: .helmignore  Chart.yaml  values.yaml
deploy/helm/ai-agent-monitoring/charts/: grafana-mcp-0.3.1.tgz
deploy/helm/ai-agent-monitoring/templates/: NOTES.txt  _helpers.tpl  clusterrolebinding.yaml  configmap.yaml  deployment-agent.yaml  deployment-loki-mcp.yaml  deployment-prometheus-mcp.yaml  secret.yaml  service-agent.yaml  service-loki-mcp.yaml  service-prometheus-mcp.yaml  serviceaccount.yaml
deploy/helm/clickhouse/: Chart.yaml  values.yaml
deploy/helm/clickhouse/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  secret.yaml  service.yaml  statefulset.yaml
deploy/langfuse-worker/: Dockerfile
deploy/loki-mcp/: Dockerfile
deploy/ollama/: Dockerfile
deploy/prometheus/: alert_rules.yml  prometheus.yml
deploy/prometheus-mcp/: Dockerfile
deploy/promtail/: promtail.yml
docs/: architecture.md  configuration.md  integration.md  secrets-management.md  setup.md
docs/query_reference/: logql_basics.md  logql_examples.md  logql_metrics.md  loki_endpoints.md  prometheus_endpoints.md  promql_basics.md  promql_examples.md  promql_functions.md
modelfiles/ollama/: ministral-3:3b
src/ai_agent_monitoring/: __init__.py
src/ai_agent_monitoring/agents/: __init__.py  logs_agent.py  metrics_agent.py  orchestrator.py  prompts.py  rca_agent.py
src/ai_agent_monitoring/api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py
src/ai_agent_monitoring/core/: __init__.py  config.py  llm_retry.py  models.py  renderer.py  sanitizer.py  state.py  tracing.py
src/ai_agent_monitoring/tools/: __init__.py  base.py  grafana.py  loki.py  prometheus.py  query_rag.py  query_validator.py  registry.py  time.py
tests/: conftest.py  test_agents.py  test_api.py  test_config.py  test_core_models.py  test_core_renderer.py  test_core_state.py  test_dependencies.py  test_integration.py  test_llm_retry.py  test_mcp_client.py  test_query_rag.py  test_query_validator.py  test_time_tools.py  test_tools.py  test_tracing.py
