[project]
name = "ai-agent-monitoring"
version = "0.1.0"
description = "AI Agent による自律型システム監視システム"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "langfuse>=2.0",
    "langchain>=1.2.7",
    "mcp>=1.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent_monitoring"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "S", "RUF"]
ignore = [
    "RUF001",  # 日本語文字列の全角文字を許可
    "RUF002",  # 日本語docstringの全角文字を許可
    "RUF003",  # 日本語コメントの全角文字を許可
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert の使用を許可
    "S105",  # テスト用ハードコードパスワードを許可
    "S106",  # テスト用ハードコードパスワードを許可
    "S107",  # テスト用ハードコードパスワードを許可
    "S108",  # テスト用の /tmp パスを許可
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: 結合テスト（docker-compose環境が必要）",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
